--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*Monsterrtat font */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
+body{
+    background-color: #000;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.title{
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.bx{
+    font-size: 1.3rem;
+    cursor: pointer;
+    margin-left: 1rem;
+}
+
